# corefw

./: .gitignore  Makefile  README.md  autogen.sh  buildsys.mk.in  cfwarray.c  cfwclass.h  cfwobject.c  cfwobject.h  cfwstring.c  cfwstring.h  configure.ac  test.c
src/: Makefile  array.c  array.h  bool.c  bool.h  box.c  box.h  cfwarray.c  cfwarray.h  cfwclass.c  cfwobject.c  cfwobject.h  cfwrange.c  cfwrange.h  cfwstring.c  cfwstring.h  class.c  class.h  corefw.h  double.c  double.h  file.c  file.h  hash.h  int.c  int.h  map.c  map.h  object.c  object.h  range.c  range.h  refpool.c  refpool.h  stream.c  stream.h  string.c  string.h  tcpsocket.c  tcpsocket.h
tests/: Makefile  tests.c
